<resources>

    <string name="app_name">LunchList</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_lunch_list">LunchList</string>
    
    <string name="sit_down">Sit Down</string>
    <string name="take_out">Take Out</string>
    <string name="delivery">Delivery</string>
    
    <string name="restaurant_name">Name:</string>
    <string name="restaurant_address">Address:</string>
    <string name="restaurant_type">Type:</string>
    <string name="notes">Notes:</string>
    <string name="feed">Feed URL</string>
    <string name="phone">Phone:</string>
    
    <string name="save">Save</string>
    <string name="description">This is an image icon</string>
    <string name="click_here">Click the MENU button to add a rest</string>
    <string name="location">Location:</string>
    <string name="notset">(not set)</string>
    <string name="time_for_lunch">It\'s time for lunch!</string>
    <string name="empty">No restaurants</string>

</resources>