<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="match_parent"
     	android:layout_height="wrap_content" >
	<TableLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:shrinkColumns="1"
	    android:stretchColumns="1" >
	    <TableRow>
	        <TextView android:text="@string/restaurant_name" />
	        <EditText android:id="@+id/name"
	            	  android:inputType="text" />
	    </TableRow>
	    <TableRow>
	        <TextView android:text="@string/restaurant_address" />
	        <EditText android:id="@+id/addr" 
	            	  android:inputType="text" />
	    </TableRow>
	    <TableRow>
	        <TextView android:text="@string/restaurant_type" />
	        <RadioGroup android:id="@+id/types" >
	            <RadioButton android:id="@+id/take_out"
	                android:checked="true"
	                android:text="@string/take_out" />
	            <RadioButton android:id="@+id/sit_down"
	                android:text="@string/sit_down" />
	            <RadioButton android:id="@+id/delivery"
	                android:text="@string/delivery" />
	        </RadioGroup>
	    </TableRow>
	    <TableRow>
	        <TextView android:text="@string/location" />
	        <TextView android:id="@+id/location"
	            android:text="@string/notset" />
	    </TableRow>
	    <EditText android:id="@+id/notes"
	        android:inputType="textMultiLine"
	        android:gravity="top"
	        android:lines="2"
	        android:scrollHorizontally="false"
	        android:maxLines="2"
	        android:hint="@string/notes" />
	    <EditText android:id="@+id/feed"
	        android:hint="@string/feed" />
		<Button android:id="@+id/save"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/save" />
	</TableLayout>
</ScrollView>